--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.13",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "next": "15.2.2",
     "react": "^19.0.0",
