--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-charts": "^7.28.0",
     "@tailwindcss/vite": "^4.0.13",
-    "chart.js": "^4.4.8",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^12.5.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
