--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mui/x-charts": "^7.28.0",
     "@tailwindcss/vite": "^4.0.13",
-    "chart.js": "^4.4.8",
-    "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^12.5.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
